# CrimeMap

./: .bazelrc  .gitignore  BUILD.bazel  README  WORKSPACE  deps.bzl  go.mod  go.sum
analytics/offline/data_cleaning/Austin/: Austin.java  AustinMapper.java  AustinReducer.java
analytics/offline/data_cleaning/Chicago/: ChicagoCrime.java  ChicagoCrimeMapper.java  ChicagoCrimeReducer.java
analytics/offline/data_cleaning/LosAngeles/: LA.java  LAMapper.java  LAReducer.java
analytics/offline/data_cleaning/NewYork/: DataCleaning.java  DataCleaningNYCCurrentMapper.java  DataCleaningNYCHistoricMapper.java  DataCleaningReducer.java  start.sh
analytics/offline/data_cleaning/San Francisco/: SFDataClean.java  SFDataCleanMapper1.java  SFDataCleanMapper2.java  SFDataCleanReducer.java
analytics/offline/data_cleaning/Seattle/: SeattleDataClean.java  SeattleDataCleanMapper.java  SeattleDataCleanReducer.java
analytics/offline/data_importing/: README.txt  dependency-reduced-pom.xml  pom.xml
analytics/offline/data_importing/src/main/java/edu/nyu/: DataImporting.java  DataImportingMapper.java  HBaseCrimeMapper.java
analytics/offline/data_migration/: ImportTsv.py  README.txt  dependency-reduced-pom.xml
analytics/offline/data_migration/src/main/java/edu/nyu/: DataMigration.java  DataMigrationMapper.java
analytics/offline/trino/: crime_analysis.twbx  queries.sql  trino_commands.txt
analytics/online/app/: BUILD.bazel
analytics/online/app/src/app/: app.component.ts
analytics/online/config/: BUILD.bazel  crimemap.dev.yaml  crimemap.grpc.yaml  crimemap.http.yaml  crimemap.release.yaml  crimemap.yaml
analytics/online/deployment/: crimemap.yaml
analytics/online/proto/: BUILD.bazel  crime.proto  crimemap_service.proto
analytics/online/proto/crimemap_service/: crimemap_service.pb.go  crimemap_service.proto
analytics/online/proto/crimemap_service/crimemap_service/: BUILD.bazel
analytics/online/server/cmd/: BUILD.bazel  main.go  project.code-workspace
analytics/online/server/crimemap_service/: BUILD.bazel  crimemap_service.go
analytics/online/server/enviroment/: BUILD.bazel  enviroment.go
analytics/online/server/grpc_server/: BUILD.bazel  grpc_server.go
analytics/online/server/grpc_web_server/: grpc_web_server.go
analytics/online/server/hbase_client/: BUILD.bazel  hbase_client.go
analytics/online/server/http_server/: BUILD.bazel  http_server.go
analytics/online/server/interfaces/: BUILD.bazel  interfaces.go
analytics/online/server/metrics/: BUILD.bazel  metrics.go
analytics/online/server/prometheus_monitor/: BUILD.bazel  prometheus_monitor.go
analytics/online/server/real_enviroment/: BUILD.bazel  real_enviroment.go
analytics/online/server/trino_client/: BUILD.bazel  trino_client.go
github.com/jialunzhai/crimemap/analytics/online/crimemap_service/: BUILD.bazel  crimemap_service.pb.go  crimemap_service_grpc.pb.go
