load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "crimemap_service",
    srcs = ["crimemap_service.go"],
    importpath = "cs.nyu.edu/crimemap/analytics/online/server/crimemap_service",
    visibility = ["//visibility:public"],
    deps = [
        "//analytics/online/proto",
        "//analytics/online/server/enviroment",
    ],
)
