load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "grpc",
    srcs = ["grpc.go"],
    importpath = "cs.nyu.edu/crimemap/analytics/online/server/grpc",
    visibility = ["//visibility:public"],
    deps = [
        "//analytics/online/server/enviroment",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_library(
    name = "grpc_service",
    srcs = ["grpc_service.go"],
    importpath = "cs.nyu.edu/crimemap/analytics/online/server/grpc_service",
    visibility = ["//visibility:public"],
    deps = [
        "//analytics/online/server/enviroment",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_library(
    name = "grpc_server",
    srcs = ["grpc_server.go"],
    importpath = "cs.nyu.edu/crimemap/analytics/online/server/grpc_server",
    visibility = ["//visibility:public"],
    deps = [
        "//analytics/online/server/enviroment",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
