load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "interfaces",
    srcs = ["interfaces.go"],
    importpath = "cs.nyu.edu/crimemap/analytics/online/server/interfaces",
    visibility = ["//visibility:public"],
    deps = [
        "//analytics/online/proto",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
